--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fake-db",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Generate a db with fake data",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,7 @@
   "author": "EMS",
   "license": "ISC",
   "dependencies": {
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "mongoose": "^5.6.9"
   }
 }
